[package]
name = "torrust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.0", features = ["derive"]}
bendy = "0.3"
sha1 = "0.10"
reqwest = { version = "0.11", features = ["blocking"] }
urlencoding = "2.1.2"
log = "0.4.17"
bit-vec = "0.6.3"
strum = "0.24"
strum_macros = "0.24"
crossbeam-channel = "0.5.6"
simple_logger = "4.0.0"
rand = "0.8.5"